--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-Public\Get-NFT.ps1
-Public\New-SolanaNFT.ps1
-Public\Get-NFTCollectionStats.ps1
+Public/Get-NFT.ps1
+Public/New-SolanaNFT.ps1
+Public/Get-NFTCollectionStats.ps1
